// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyButton/> render should render a disabled button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="wrapper container disabled fill primary medium isDisabled"
    href="#"
    type="submit"
  >
    <img
      alt="private message icon"
      class="messengerIcon"
      src="test-file-stub"
    />
    Message
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render a disabled button 2`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="wrapper container disabled fill primary medium isDisabled"
    href="#"
    type="submit"
  >
    <img
      alt="private message icon"
      class="messengerIcon"
      src="test-file-stub"
    />
    Message
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render the button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="false"
    class="wrapper container fill primary medium"
    href="#"
    type="submit"
  >
    <img
      alt="private message icon"
      class="messengerIcon"
      src="test-file-stub"
    />
    Message
  </button>
</div>
`;
